@@ -86,8 +86,8 @@ $table->data[11][0] = __('Font size');
 $table->data[11][1] = html_print_select(range(1, 15), 'font_size', $config["font_size"], '', '', 0, true); 
 
 $table->data[12][0] = __('Flash charts');
-$table->data[12][1] = __('Yes').'&nbsp;'.html_print_radio_button ('flash_charts', 1, '', $config["flash_charts"], true).'&nbsp;&nbsp;';
-$table->data[12][1] .= __('No').'&nbsp;'.html_print_radio_button ('flash_charts', 0, '', $config["flash_charts"], true);
+$table->data[12][1] = __('Yes').'&nbsp;'.html_print_radio_button ('flash_charts', 1, '', $config["global_flash_charts"], true).'&nbsp;&nbsp;';
+$table->data[12][1] .= __('No').'&nbsp;'.html_print_radio_button ('flash_charts', 0, '', $config["global_flash_charts"], true);
 
 if (!defined ('PANDORA_ENTERPRISE')){
 	$table->data[13][0] = __('Custom logo') . ui_print_help_icon("custom_logo", true);
